Removing deprecated URL constructor